fix: skills section mobile pt1

--- a/style.css
+++ b/style.css
@@ -305,52 +305,15 @@ main h2 {
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
-  gap: 20px;
+  gap: 30px;
 }
 
 .skill-card {
-  flex: 1 100px;
+  flex: 1 200px;
   padding: 20px;
   background-color: #FFF;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   cursor: pointer;
-}
-
-.skill-card:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.skill-card:hover .skill-card__header {
-  height: 40px;
-}
-.skill-card:hover .skill-card__icon {
-  transform: translateX(-50%) translateY(-50%) scale(3);
-}
-.skill-card:hover .skill-card__body {
-  height: 195px;
-}
-.skill-card:hover .skill-card__knowledge li {
-  transform: translateX(0);
-  transition-timing-function: cubic-bezier(0, 1.5, 1, 1);
-  transition-duration: .5s;
-}
-
-.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(1) {
-  transition-delay: 0.25s;
-}
-.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(2) {
-  transition-delay: 0.5s;
-}
-.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(3) {
-  transition-delay: 0.75s;
-}
-.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(4) {
-  transition-delay: 1s;
-}
-.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(5) {
-  transition-delay: 1.25s;
-}
-.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(6) {
-  transition-delay: 1.5s;
 }
 
 .skill-card__header {
@@ -385,21 +348,16 @@ main h2 {
 }
 
 .skill-card__body {
-  height: 40px;
   transition: height .5s;
   overflow: hidden;
 }
 
 .skill-card__body .skill-card__title {
-  font-size: 1.4em;
+  text-align: center;
+  font-size: 2rem;
   font-weight: 600;
   text-transform: uppercase;
   color: black;
-}
-
-.skill-card__body .skill-card__duration {
-  color: #9E9E9E;
-  font-style: italic;
 }
 
 .skill-card__body .skill-card__knowledge {
@@ -408,9 +366,8 @@ main h2 {
 
 .skill-card__body .skill-card__knowledge li {
   margin-top: 5px;
-  transition-duration: 0;
-  transition-delay: .5s;
-  transform: translateX(-100%);
+  font-size: 1.5rem;
+  list-style: square;
 }
 
 
@@ -488,4 +445,41 @@ footer .footer-socials i.fa-linkedin {
     border-bottom: none;
   }
 
+  /*
+  .skill-card:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+  .skill-card:hover .skill-card__header {
+    height: 40px;
+  }
+  .skill-card:hover .skill-card__icon {
+    transform: translateX(-50%) translateY(-50%) scale(3);
+  }
+  .skill-card:hover .skill-card__body {
+    height: 195px;
+  }
+  .skill-card:hover .skill-card__knowledge li {
+    transform: translateX(0);
+    transition-timing-function: cubic-bezier(0, 1.5, 1, 1);
+    transition-duration: .5s;
+  }
+  .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(1) {
+    transition-delay: 0.25s;
+  }
+  .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(2) {
+    transition-delay: 0.5s;
+  }
+  .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(3) {
+    transition-delay: 0.75s;
+  }
+  .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(4) {
+    transition-delay: 1s;
+  }
+  .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(5) {
+    transition-delay: 1.25s;
+  }
+  .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(6) {
+    transition-delay: 1.5s;
+  }
+  */
 }
